add company data

--- a/capabilities.html
+++ b/capabilities.html
@@ -146,6 +146,42 @@
                 they bring with them a variety of backgrounds, cultures, values, and lived experiences that make the
                 team as a whole more creative in their approach to problem solving.
             </p>
+            <h2 class="text-transform-uppercase font-family-oswald font-color-white margin-bottom-5">
+                Company Data
+            </h2>
+            <p class="font-color-white font-family-ibm font-weight-700">
+                DUNS
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                117080315
+            </p>
+            <p class="font-color-white font-family-ibm font-weight-700">
+                CAGE
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                8DDB4
+            </p>
+            <p class="font-color-white font-family-ibm font-weight-700">
+                NAICS Codes
+            </p>
+            <p class="font-color-white font-family-ibm">
+                541511 - Custom Computer Programming Services
+            </p>
+            <p class="font-color-white font-family-ibm">
+                541512 - Computer Systems Design Services
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                541519 - Other Computer Related Services
+            </p>
+            <p class="font-color-white font-family-ibm font-weight-700">
+                CERTIFICATIONS
+            </p>
+            <p class="font-color-white font-family-ibm">
+                WOSB: Woman-Owned Small Business
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                EDWOSB: Economically Disadvantaged Woman-Owned Small Business
+            </p>
         </div>
     </section>
 </main>
