--- a/capabilities.html
+++ b/capabilities.html
@@ -131,12 +131,12 @@
                 just as the work of our mentors has supported us in our endeavors.
             </p>
             <h3 class="font-color-white font-family-ibm margin-bottom-3 font-weight-700">
-                3. Our Working-In-The-Open Philosophy
+                3. Our Diversity
             </h3>
             <p class="font-color-white font-family-ibm margin-bottom-5">
                 <span class="text-underline">What that means:</span> We put together a team of diverse unique talented
                 folks with a vast playbook of skills from different geographic areas, of different ethnicities, age,
-                gender, and orientation
+                gender, and orientation.
             </p>
             <p class="font-color-white font-family-ibm margin-bottom-5">
                 <span class="text-underline">We believe:</span> Diverse Teams Do Better Work.
