add name meaning blurb

--- a/origin.html
+++ b/origin.html
@@ -7,53 +7,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="display-flex flex-direction-column">
-    <main class="hero-height display-flex flex-direction-column">
-        <section class="font-color-white text-transform-uppercase">
-            <header>
-                <nav class="display-flex nav-container">
-                    <div class="font-family-oswald link-hover justify-content-start align-self-stretch text-align-center">
-                        <a class="logo-link vertical-align-middle" href="/">
-                            HAYANOVA
-                        </a>
-                    </div>
-                    <div class="justify-content-end flex-1 display-flex nav-tainer">
-                        <ul class="nav font-family-ibm">
-                            <li>
-                                <a href="/origin">Origin</a>
-                            </li>
-                            <li>
-                                <a href="/capabilities">Capabilities</a>
-                            </li>
-                            <li>
-                                <a href="/contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </header>
-        </section>
-        <section class="display-flex flex-direction-column flex-1 justify-content-center container-content align-self-center">
-            <h1 class="text-transform-uppercase line font-family-oswald font-color-white margin-bottom-5 non-hero-h1">
-                Origin: Our Story
-            </h1>
-            <div>
-                <p class="font-color-white font-family-ibm margin-bottom-5 font-weight-700">
-                    We’re HAYANOVA.
-                </p>
-                <p class="font-color-white font-family-ibm margin-bottom-5 font-weight-700">
-                    We’re an Agile-fluent crew of polyglot programmers, engineers, and developers on a voyage to explore
-                    what it means to create human-centered technologies. For over a decade, we have translated real-world
-                    needs into digital solutions by designing approachable systems and applications that are intuitive,
-                    imbued with compassion, and just simply work (and will continue to work).
-                </p>
-                <p class="font-color-white font-family-ibm margin-bottom-5 font-weight-700">
-                    We’re on a mission to discover new ways to build harmonious software for people and machines. Whether
-                    we’re modernizing legacy systems or making history ourselves, HAYANOVA is guided towards the great
-                    beyond by our desire to make a meaningful impact on humanity with the work we do and to deliver
-                    happiness along the way.
-                </p>
-            </div>
-        </section>
-    </main>
+<main class="hero-height display-flex flex-direction-column">
+    <section class="font-color-white text-transform-uppercase">
+        <header>
+            <nav class="display-flex nav-container">
+                <div class="font-family-oswald link-hover justify-content-start align-self-stretch text-align-center">
+                    <a class="logo-link vertical-align-middle" href="/">
+                        HAYANOVA
+                    </a>
+                </div>
+                <div class="justify-content-end flex-1 display-flex nav-tainer">
+                    <ul class="nav font-family-ibm">
+                        <li>
+                            <a href="/origin">Origin</a>
+                        </li>
+                        <li>
+                            <a href="/capabilities">Capabilities</a>
+                        </li>
+                        <li>
+                            <a href="/contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </section>
+    <section
+            class="display-flex flex-direction-column flex-1 justify-content-center container-content align-self-center">
+        <h1 class="text-transform-uppercase line font-family-oswald font-color-white margin-bottom-5 non-hero-h1">
+            Origin: Our Story
+        </h1>
+        <div>
+            <p class="font-color-white font-family-ibm margin-bottom-5 font-weight-700">
+                We’re HAYANOVA.
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                We’re an Agile-fluent crew of polyglot programmers, engineers, and developers on a voyage to explore
+                what it means to create human-centered technologies. For over a decade, we have translated real-world
+                needs into digital solutions by designing approachable systems and applications that are intuitive,
+                imbued with compassion, and just simply work (and will continue to work).
+            </p>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                We look to the origin of our name to inspire and motivate us.
+            </p>
+            <ul class="blurb margin-left-3em">
+                <li class="font-color-white font-family-ibm margin-bottom-5">
+                    <span class="font-weight-700">AYA</span> is our guiding principle: <span
+                        class="font-weight-700">A</span>dapt <span class="font-weight-700">Y</span>our <span
+                        class="font-weight-700">A</span>pproach.
+                </li>
+                <li class="font-color-white font-family-ibm margin-bottom-5">
+                    Our journey is upwards, mirroring that of the 5th stage of star development, the <span
+                        class="font-weight-700">HAYA</span>SHI TRACK,
+                    which culminates in a SUPER<span class="font-weight-700">NOVA</span>, a luminous stellar explosion
+                    that symbolizes our desire to work on
+                    meaningful history-making projects.
+                </li>
+            </ul>
+            <p class="font-color-white font-family-ibm margin-bottom-5">
+                We’re on a mission to discover new ways to build harmonious software for people and machines. Whether
+                we’re modernizing legacy systems or making history ourselves, HAYANOVA is guided towards the great
+                beyond by our desire to make a meaningful impact on humanity with the work we do and to deliver
+                happiness along the way.
+            </p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
